--- a/donate-today.css
+++ b/donate-today.css
@@ -1,3 +1,145 @@
-body{
+body {
     font-family: 'Inter', sans-serif;
+    margin: 0;
+}
+
+h1 {
+    font-size: 65px;
+    font-weight: 700;
+
+}
+
+.white {
+    color: white;
+}
+
+.gray {
+    color: #707070;
+}
+
+.cover {
+    display: flex;
+    height: 900px;
+    margin-bottom: 100px;
+
+}
+
+.cover img {
+    width: 100%;
+
+}
+
+.text-on-img {
+    position: absolute;
+    z-index: 10;
+    width: 50%;
+    margin: 15% 25% 0% 25%;
+
+}
+
+.text-on-img p {
+    color: white;
+    font-size: 18px;
+    padding-bottom: 50px;
+
+}
+
+.backlayer {
+    width: 100%;
+    height: 121%;
+    background-image: linear-gradient(0deg, rgb(5, 0, 0), rgba(255, 255, 255, 0));
+    opacity: 1;
+    position: absolute;
+    z-index: 9;
+}
+
+.button {
+    color: white;
+    text-decoration: none;
+    border-radius: 10px;
+    padding: 20px 30px;
+    background-color: #FF5959;
+    font-size: 20px;
+}
+
+.center {
+    text-align: center;
+}
+
+h2 {
+    font-size: 45px;
+}
+
+.donate {
+    line-height: 30px;
+    margin-bottom: 100px;
+}
+
+p {
+    line-height: 30px;
+    font-size: 20px;
+}
+
+.flex {
+    display: flex;
+}
+
+.amount {
+    width: 50%;
+    margin: 4% 25% 5% 25%;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.amount div {
+    background-color: #FAFAFA;
+    width: 200px;
+    margin: 10px;
+    text-align: center;
+    line-height: 130px;
+    font-size: 30px;
+    border-radius: 10px;
+}
+
+h3 {
+    font-size: 30px;
+}
+
+.bold {
+    font-weight: 700;
+}
+
+#orange-box {
+    border: 3px solid #FF5959;
+    background-color: #ff595929;
+    color: #FF5959;
+}
+
+hr {
+    width: 50%;
+    margin-bottom: 3%;
+}
+
+.plan {
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: left;
+}
+
+.card {
+    margin: 5% 1%;
+    border-radius: 10px;
+    padding: 4% 4%;
+}
+
+.color-1 {
+    background-color: #4f9da631;
+}
+
+.color-2 {
+    background-color: #ff59592e;
+}
+
+.color-3 {
+    background-color: #fff4d6;
 }
