--- a/donate-today.css
+++ b/donate-today.css
@@ -143,3 +143,15 @@ hr {
 .color-3 {
     background-color: #fff4d6;
 }
+
+input[type=text] {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 4% 25% 5% 25%;
+    box-sizing: border-box;
+    border: none;
+    border-bottom: 2px solid #707070;
+    font-size: 20px;
+    text-align: center;
+    color: #707070;
+  }
