--- a/donate-today.css
+++ b/donate-today.css
@@ -154,4 +154,107 @@ input[type=text] {
     font-size: 20px;
     text-align: center;
     color: #707070;
-  }
+}
+
+.contribute {
+    margin: 5% 10%;
+
+}
+
+.contribute div {
+    max-width: 500px;
+    margin-left: 50px;
+}
+
+.contribute div p {
+    padding-bottom: 30px;
+}
+
+.contribute div img {
+    width: 500px;
+    border-radius: 10px;
+    margin-left: 90px;
+}
+
+.update {
+    width: 50%;
+    align-items: center;
+    margin: 10% 25%;
+}
+
+.Email {
+    padding: 80px 200px;
+    background-color: #FFF4D6;
+
+}
+
+input[type="email"] {
+    font-size: 20px;
+    padding: 15px 10px;
+    background-color: #D9D9D9;
+    border-radius: 7px 0px 0px 7px;
+    box-sizing: border-box;
+    border: none;
+}
+
+.Email a {
+    font-size: 20px;
+    padding: 15px 20px;
+    margin: 0;
+    background-color: #FF5959;
+    border-radius: 0px 7px 7px 0px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+}
+
+.end {
+    background-color: black;
+    color: #FF5959;
+    padding: 50px 0%;
+    text-align: center;
+    font-family: 'Lobster', cursive;
+    line-height: 10px;
+}
+
+#c-font {
+    font-family: 'Inter', sans-serif;
+    color: white;
+    font-weight: 200;
+}
+
+.contribution {
+    margin: 10% 15%;
+}
+
+.container {
+    width: 100%;
+    background-color: #FF5959;
+}
+
+.progress {
+    text-align: right;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: rgb(253, 249, 249);
+}
+
+.street-child {
+    width: 90%;
+    background-color: #707070;
+}
+
+.flood {
+    width: 60%;
+    background-color: #707070;
+}
+
+.covid {
+    width: 40%;
+    background-color: #707070;
+}
+
+.cyclone {
+    width: 30%;
+    background-color: #707070;
+}
