--- a/donate-today.css
+++ b/donate-today.css
@@ -1,260 +1,253 @@
 body {
-    font-family: 'Inter', sans-serif;
-    margin: 0;
+  font-family: "Inter", sans-serif;
+  margin: 0;
 }
 
 h1 {
-    font-size: 65px;
-    font-weight: 700;
-
+  font-size: 65px;
+  font-weight: 700;
 }
 
 .white {
-    color: white;
+  color: white;
 }
 
 .gray {
-    color: #707070;
+  color: #707070;
 }
 
 .cover {
-    display: flex;
-    height: 900px;
-    margin-bottom: 100px;
-
+  display: flex;
+  height: 900px;
+  margin-bottom: 100px;
 }
 
 .cover img {
-    width: 100%;
-
+  width: 100%;
 }
 
 .text-on-img {
-    position: absolute;
-    z-index: 10;
-    width: 50%;
-    margin: 15% 25% 0% 25%;
-
+  position: absolute;
+  z-index: 10;
+  width: 50%;
+  margin: 15% 25% 0% 25%;
 }
 
 .text-on-img p {
-    color: white;
-    font-size: 18px;
-    padding-bottom: 50px;
-
+  color: white;
+  font-size: 18px;
+  padding-bottom: 50px;
 }
 
 .backlayer {
-    width: 100%;
-    height: 121%;
-    background-image: linear-gradient(0deg, rgb(5, 0, 0), rgba(255, 255, 255, 0));
-    opacity: 1;
-    position: absolute;
-    z-index: 9;
+  width: 100%;
+  height: 121%;
+  background-image: linear-gradient(0deg, rgb(5, 0, 0), rgba(255, 255, 255, 0));
+  opacity: 1;
+  position: absolute;
+  z-index: 9;
 }
 
 .button {
-    color: white;
-    text-decoration: none;
-    border-radius: 10px;
-    padding: 20px 30px;
-    background-color: #FF5959;
-    font-size: 20px;
+  color: white;
+  text-decoration: none;
+  border-radius: 10px;
+  padding: 20px 30px;
+  background-color: #ff5959;
+  font-size: 20px;
 }
 
 .center {
-    text-align: center;
+  text-align: center;
 }
 
 h2 {
-    font-size: 45px;
+  font-size: 45px;
 }
 
 .donate {
-    line-height: 30px;
-    margin-bottom: 100px;
+  line-height: 30px;
+  margin-bottom: 100px;
 }
 
 p {
-    line-height: 30px;
-    font-size: 20px;
+  line-height: 30px;
+  font-size: 20px;
 }
 
 .flex {
-    display: flex;
+  display: flex;
 }
 
 .amount {
-    width: 50%;
-    margin: 4% 25% 5% 25%;
-    font-size: 30px;
-    font-weight: 700;
+  width: 50%;
+  margin: 4% 25% 5% 25%;
+  font-size: 30px;
+  font-weight: 700;
 }
 
 .amount div {
-    background-color: #FAFAFA;
-    width: 200px;
-    margin: 10px;
-    text-align: center;
-    line-height: 130px;
-    font-size: 30px;
-    border-radius: 10px;
+  background-color: #fafafa;
+  width: 200px;
+  margin: 10px;
+  text-align: center;
+  line-height: 130px;
+  font-size: 30px;
+  border-radius: 10px;
 }
 
 h3 {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 .bold {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 #orange-box {
-    border: 3px solid #FF5959;
-    background-color: #ff595929;
-    color: #FF5959;
+  border: 3px solid #ff5959;
+  background-color: #ff595929;
+  color: #ff5959;
 }
 
 hr {
-    width: 50%;
-    margin-bottom: 3%;
+  width: 50%;
+  margin-bottom: 3%;
 }
 
 .plan {
-    margin-left: 10%;
-    margin-right: 10%;
-    text-align: left;
+  margin-left: 10%;
+  margin-right: 10%;
+  text-align: left;
 }
 
 .card {
-    margin: 5% 1%;
-    border-radius: 10px;
-    padding: 4% 4%;
+  margin: 5% 1%;
+  border-radius: 10px;
+  padding: 4% 4%;
 }
 
 .color-1 {
-    background-color: #4f9da631;
+  background-color: #4f9da631;
 }
 
 .color-2 {
-    background-color: #ff59592e;
+  background-color: #ff59592e;
 }
 
 .color-3 {
-    background-color: #fff4d6;
+  background-color: #fff4d6;
 }
 
-input[type=text] {
-    width: 50%;
-    padding: 12px 20px;
-    margin: 4% 25% 5% 25%;
-    box-sizing: border-box;
-    border: none;
-    border-bottom: 2px solid #707070;
-    font-size: 20px;
-    text-align: center;
-    color: #707070;
+input[type="text"] {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 4% 25% 5% 25%;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 2px solid #707070;
+  font-size: 20px;
+  text-align: center;
+  color: #707070;
 }
 
 .contribute {
-    margin: 5% 10%;
-
+  margin: 5% 10%;
 }
 
 .contribute div {
-    max-width: 500px;
-    margin-left: 50px;
+  max-width: 500px;
+  margin-left: 50px;
 }
 
 .contribute div p {
-    padding-bottom: 30px;
+  padding-bottom: 30px;
 }
 
 .contribute div img {
-    width: 500px;
-    border-radius: 10px;
-    margin-left: 90px;
+  width: 500px;
+  border-radius: 10px;
+  margin-left: 90px;
 }
 
 .update {
-    width: 50%;
-    align-items: center;
-    margin: 10% 25%;
+  width: 50%;
+  align-items: center;
+  margin: 10% 25%;
 }
 
 .Email {
-    padding: 80px 200px;
-    background-color: #FFF4D6;
-
+  padding: 80px 200px;
+  background-color: #fff4d6;
 }
 
 input[type="email"] {
-    font-size: 20px;
-    padding: 15px 10px;
-    background-color: #D9D9D9;
-    border-radius: 7px 0px 0px 7px;
-    box-sizing: border-box;
-    border: none;
+  font-size: 20px;
+  padding: 15px 10px;
+  background-color: #d9d9d9;
+  border-radius: 7px 0px 0px 7px;
+  box-sizing: border-box;
+  border: none;
 }
 
 .Email a {
-    font-size: 20px;
-    padding: 15px 20px;
-    margin: 0;
-    background-color: #FF5959;
-    border-radius: 0px 7px 7px 0px;
-    text-align: center;
-    text-decoration: none;
-    color: white;
+  font-size: 20px;
+  padding: 15px 20px;
+  margin: 0;
+  background-color: #ff5959;
+  border-radius: 0px 7px 7px 0px;
+  text-align: center;
+  text-decoration: none;
+  color: white;
 }
 
 .end {
-    background-color: black;
-    color: #FF5959;
-    padding: 50px 0%;
-    text-align: center;
-    font-family: 'Lobster', cursive;
-    line-height: 10px;
+  background-color: black;
+  color: #ff5959;
+  padding: 50px 0%;
+  text-align: center;
+  font-family: "Lobster", cursive;
+  line-height: 10px;
 }
 
 #c-font {
-    font-family: 'Inter', sans-serif;
-    color: white;
-    font-weight: 200;
+  font-family: "Inter", sans-serif;
+  color: white;
+  font-weight: 200;
 }
 
 .contribution {
-    margin: 10% 15%;
+  margin: 10% 15%;
 }
 
 .container {
-    width: 100%;
-    background-color: #FF5959;
+  width: 100%;
+  background-color: #ff5959;
 }
 
 .progress {
-    text-align: right;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: rgb(253, 249, 249);
+  text-align: right;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: rgb(253, 249, 249);
 }
 
 .street-child {
-    width: 90%;
-    background-color: #707070;
+  width: 90%;
+  background-color: #707070;
 }
 
 .flood {
-    width: 60%;
-    background-color: #707070;
+  width: 60%;
+  background-color: #707070;
 }
 
 .covid {
-    width: 40%;
-    background-color: #707070;
+  width: 40%;
+  background-color: #707070;
 }
 
 .cyclone {
-    width: 30%;
-    background-color: #707070;
+  width: 30%;
+  background-color: #707070;
 }
